--- a/styles/style.css
+++ b/styles/style.css
@@ -1,104 +1,104 @@
- /* modal container background */
- #modal-left-container{
-    background: rgba(235, 87, 87, 0.05);
-    border: 1px solid #EB5757;
-    border-radius: 16px;
- }
- #modal-right-container{
-    background: #FFFFFF;
-border: 1px solid #E7E7E7;
-border-radius: 16px;
- }
+/* modal container background */
+#modal-left-container {
+  background: rgba(235, 87, 87, 0.05);
+  border: 1px solid #eb5757;
+  border-radius: 16px;
+}
+#modal-right-container {
+  background: #ffffff;
+  border: 1px solid #e7e7e7;
+  border-radius: 16px;
+}
 
- /* price box */
- #cost-box1{
-    background: #FFFFFF;
-border-radius: 16px;
-color: green;
- }
- #cost-box2{
-    background: #FFFFFF;
-border-radius: 16px;
-color: orange;
- }
- #cost-box3{
-    background: #FFFFFF;
-border-radius: 16px;
-color: red;
- }
+/* price box */
+#cost-box1 {
+  background: #ffffff;
+  border-radius: 16px;
+  color: green;
+}
+#cost-box2 {
+  background: #ffffff;
+  border-radius: 16px;
+  color: orange;
+}
+#cost-box3 {
+  background: #ffffff;
+  border-radius: 16px;
+  color: red;
+}
 
- /* close btn */
- #btn-x{
+/* close btn */
+#btn-x {
+  background-color: red;
+  border-radius: 50%;
+  padding: 10px;
+  /* margin-right: -60px;
+    margin-top: -85px; */
+  margin-right: -55px;
+  margin-top: -88px;
+  opacity: 10;
+}
+
+@media screen and (max-width: 576px) {
+  #btn-x {
     background-color: red;
     border-radius: 50%;
     padding: 10px;
-    /* margin-right: -60px;
-    margin-top: -85px; */
-    margin-right: -55px;
-    margin-top: -88px;
-    opacity: 10;
-   
-
- }
- 
-
- @media screen and (max-width: 576px) {
-    #btn-x{
-        background-color: red;
-        border-radius: 50%;
-        padding: 10px;
-        margin-right: -36px;
-        margin-top: -36px;
-        /* margin-right: -80px;
+    margin-right: -36px;
+    margin-top: -36px;
+    /* margin-right: -80px;
         margin-top: -130px; */
-        opacity: 10;
-  }}
-
-  @media screen and (max-width: 300px) {
-    #modal-img-btn{
-        font-size: 20%;
-        height: auto;
-        width: min-content;
-        padding: 0;
-        
-    }
+    opacity: 10;
   }
-
-  .loader{
-   position: fixed;
-   top: 0;
-   left: 0;
-width: 100%;  
-height: 100vh;
-display: flex;
-justify-content: center;
-align-items: center;
-background-color: #f7f9fb;
-transition: opacity 0.75s,visibility 0.75s;
-
 }
 
-.loader-hidden{
-   opacity: 0;
-   visibility: hidden;
+@media screen and (max-width: 300px) {
+  #modal-img-btn {
+    font-size: 20%;
+    height: auto;
+    width: min-content;
+    padding: 0;
+  }
 }
 
-.loader::after{
-   content: '';
-   width: 75px;
-   height: 75px;
-   border: 15px solid #dddddd;
-   border-top-color:  green;
-   border-radius: 50%;
-   animation: loading 0.75s ease infinite;
+.loader {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #f7f9fb;
+  transition: opacity 0.75s, visibility 0.75s;
+}
+
+.loader-hidden {
+  opacity: 0;
+  visibility: hidden;
+}
+
+.loader::after {
+  content: "";
+  width: 80px;
+  height: 80px;
+  border: 10px solid #dddddd;
+  /* border-top-color: rgb(7, 199, 39); */
+  border-top: 16px solid blue;
+  border-right: 16px solid green;
+  border-bottom: 16px solid red;
+  border-left: 16px solid pink;
+
+  border-radius: 50%;
+  animation: loading 0.75s ease infinite;
 }
 
 @keyframes loading {
-   from{
-      transform: rotate(0turn) ;
-   }
-   to{
-transform: rotate(1turn);
-   }
-   
+  from {
+    transform: rotate(0turn);
+  }
+  to {
+    transform: rotate(1turn);
+  }
 }
